# omni

./: .omni.yaml  .rustfmt.toml  Cargo.toml  README.md  build.rs  default.nix  flake.nix
.github/scripts/: get-changed-files.sh
.github/workflows/: auto-pr-cargo-dependencies.yaml  auto-pr-cargo-fixes.yaml  auto-pr-yarn-dependencies.yaml  build-and-test-target.yaml  pull-requests-labeler.yaml  release.yaml  semgrep.yaml  tests.yaml
src/: main.rs
src/internal/: build.rs  disabled_self_updater.rs  dynenv.rs  dynenv_test.rs  env.rs  errors.rs  mod.rs  self_updater.rs  testutils.rs  workdir.rs
src/internal/cache/: cargo_install.rs  cargo_install_test.rs  github_release.rs  github_release_test.rs  go_install.rs  go_install_test.rs  homebrew_operation.rs  homebrew_operation_test.rs  mise_operation.rs  mise_operation_test.rs  offsetdatetime_hashmap.rs  omnipath.rs  omnipath_test.rs  prompts.rs  prompts_test.rs  up_environments.rs  up_environments_test.rs  workdirs.rs  workdirs_test.rs
src/internal/cache/database/: errors.rs  upgrade.rs
src/internal/cache/database/sql/: github_release_operation_add_install.sql  github_release_operation_list_installed.sql  up_environments_close_missing_workdir.sql  up_environments_get_stale_open_workdir_ids.sql  up_environments_update_last_seen_at.sql  upgrade_v3_to_v4.sql  upgrade_v4_to_v5.sql
src/internal/cache/migration/: pre0029.rs  predatabase.rs  predatabase_test.rs
src/internal/commands/: base.rs  fromconfig.rs  frommakefile.rs  frompath.rs  frompath_test.rs  loader.rs  utils.rs
src/internal/commands/builtin/: cd.rs  clone.rs  help.rs  mod.rs  sandbox.rs  sandbox_test.rs  scope.rs  status.rs  tidy.rs  up.rs
src/internal/commands/builtin/config/: bootstrap.rs  check.rs  reshim.rs
src/internal/commands/builtin/hook/: base.rs  init.rs  uuid.rs
src/internal/config/: config_value.rs  loader.rs  template.rs  utils.rs  utils_test.rs
src/internal/config/parser/: check.rs  check_test.rs  command_definition.rs  command_definition_test.rs  env.rs  errors.rs  github.rs  omniconfig.rs  parse_args_value.rs  path_repo_updates.rs  prompts.rs  suggest_clone.rs  up_command.rs  up_command_test.rs
src/internal/config/parser/cache/: up_environment.rs
src/internal/config/up/: base.rs  bundler.rs  cargo_install.rs  cargo_install_test.rs  custom.rs  custom_test.rs  github_release.rs  github_release_test.rs  go_install.rs  go_install_test.rs  golang.rs  homebrew.rs  mise.rs  nix.rs  nodejs.rs  python.rs  python_test.rs  tool.rs
src/internal/config/up/utils/: askpass.rs  directory.rs  mod.rs  (+11 more)
src/internal/git/: mod.rs  org.rs  org_test.rs  parsed_repo_url.rs  parsed_repo_url_test.rs  updater.rs  utils.rs  utils_test.rs
src/internal/user_interface/: colors.rs  print.rs
src/internal/utils/: file_download.rs  mod.rs
templates/: askpass.sh.tmpl  shell_integration.bash.tmpl  shell_integration.fish.tmpl  shell_integration.zsh.tmpl
tests/: test_config_commands.bats  test_omni_sandbox.bats  test_omni_tidy.bats  test_omni_up_python.bats
tests/fixtures/: astral-sh-uv-versions.txt
tests/fixtures/omni/: help-cd-json.txt  help-cd.txt  help-json.txt  help-long-config-command-10.txt  help-long-config-command-100.txt  help-long-config-command-1000.txt  help-long-config-command-50.txt  help-status.txt  help-unfold-json.txt  help-unfold.txt  help-wrapped-60.txt  help.txt  status-config.txt  status.txt
tests/helpers/: mise.bash  utils.bash
website/: docusaurus.config.js  package.json
website/contents/reference/builtin-commands/: cd.md  clone.md  overview.md  sandbox.md  scope.md
website/contents/reference/configuration/: environment.md
website/contents/tutorials/: why-omni.md
website/contents/tutorials/get-started/: initial-configuration.md  install.md
website/src/css/: custom.css
(+22 files in other folders)
