[package]
name = "omnicli"
version = "0.0.0-git"
authors = ["Raphaël Beamonte <raphael.beamonte@gmail.com>"]
description = "Omnipotent dev tool"
documentation = "https://omnicli.dev"
edition = "2021"
homepage = "https://omnicli.dev"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/xaf/omni"
exclude = [
    ".github/*",
    "website/*",
]

[[bin]]
name = "omni"
path = "src/main.rs"

[features]
default = ["self-update-check"]
self-update = []
self-update-check = ["self-update"]

[build-dependencies]
time = { version = "0.3.43", features = ["serde-well-known"] }

[dev-dependencies]
mockito = "1.7.1"
temp-env = "0.3.6"

[dependencies]
blake3 = "1.8.2"
cfg-if = "1.0.4"
clap = { version = "4.5.53", features = ["string"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
duct = "1.1.1"
flate2 = "1.1.4"
fs4 = "0.13.0"
futures = "0.3.31"
gethostname = "1.1.0"
git-url-parse = "0.6.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
glob = "0.3.1"
globset = "0.4.18"
humantime = "2.3.0"
imara-diff = "0.1.6"
indicatif = "0.18.3"
itertools = "0.14.0"
lazy_static = "1.4.0"
libz-sys = { version = "1.1.23", features = ["static"] }  # So we can force static linking
machine-uid = "0.5.4"
md-5 = "0.10.6"
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }
node-semver = "2.2.0"
normalize-path = "0.2.1"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.18"
once_cell = "1.21.2"
openssl = { version = "0.10", features = ["vendored"] }  # So it can be bundled with the binary
path-clean = "1.0.1"
pathdiff = "0.2.3"
percent-encoding = "2.3.1"
petname = "2.0.2"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
regex = "1.12.2"
requestty = "0.6.3"
reqwest = { version = "0.12.25", features = ["blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
self-replace = "1.5.0"
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
toml = "0.9.7"
sha1 = "0.10.6"
sha2 = "0.10.9"
shell-escape = "0.1.5"
shell-words = "1.1.1"
strsim = "0.11.1"
tar = "0.4.42"
tempfile = "3.23.0"
tera = "1.20.1"
term_cursor = "0.2.1"
term_size = "0.3.2"
thiserror = "2.0.17"
time = { version = "0.3.43", features = ["macros", "serde-well-known"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.6"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
walkdir = "2.4.0"
which = "8.0.0"
whoami = "1.6.0"
xz2 = "0.1.7"
zip-extract = "0.3.0"

[package.metadata.cargo-machete]
ignored = ["libz-sys", "openssl"]

[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-darwin.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-darwin.sha256"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-darwin.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-darwin.sha256"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-linux.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-linux.sha256"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-linux.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-linux.sha256"
